fixed gap between text cont and img cont

--- a/index.css
+++ b/index.css
@@ -90,6 +90,7 @@ body {
 
 img {
 	object-fit: cover;
+	width: 100%;
 	height: 100%;
 }
 
